--- a/index.html
+++ b/index.html
@@ -2,22 +2,11 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Muj klup Arsenal i lov</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    .box {
-      max-width: 500px;
-      padding: 20px;
-      border: 2px solid #fff
-      <p>Muj klup Arsenal koham arsenal i martinelli ohhh 0 ucl</p>
+  <title>Muj klup Arsenal</title>
+</head>
+<body>
+
+<p>muj klup arsenal i lov martinelli i 0 lig mistrzuf</p>
+
+</body>
+</html>
