Add image to index.html
Signed-off-by: barttambor-afk <bart.tambor@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 
 <p>muj klup arsenal i lov martinelli i 0 lig mistrzuf</p>
-
+<img src="GG6o_EYWIAAQLNf.png" alt="Moje zdjęcie">
 </body>
 </html>
