Update index.html with new content and headings
Signed-off-by: barttambor-afk <bart.tambor@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-<p>muj klup arsenal i lov martinelli i 0 lig mistrzuf</p>
-<img src="GG6o_EYWIAAQLNf.png" alt="Moje zdjęcie">
+<h1>Muj klub ulupiony arsenal</h1>
+
+<img src="GG6o_EYWIAAQLNf.png">
+
+<p>A to muj ulupiony zawodnik martneli</p>
+
 </body>
 </html>
